Web.config ParlamentoWeb

--- a/ParlamentoWeb/app/components/login/login.view.html
+++ b/ParlamentoWeb/app/components/login/login.view.html
@@ -28,7 +28,10 @@
                     </div>
                 </div>
                 <div class="col-xs-8">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat" ng-disabled="vm.loading">Entrar</button>
+                    <button type="submit" class="btn btn-primary btn-block btn-flat" ng-disabled="vm.loading">
+                        <i class="fa fa-sign-in"></i>
+                        &nbsp;&nbsp;&nbsp;Entrar
+                    </button>
                 </div>
             </div>
         </form>
