--- a/ParlamentoWeb/app/components/home/home.view.html
+++ b/ParlamentoWeb/app/components/home/home.view.html
@@ -12,7 +12,43 @@
 <section class="content">
     <div class="box">
         <div class="box-body">
-            Start creating your amazing application!
+            <table class="table table-hover table-bordered" style="border-color: #3c8dbc">
+                <thead>
+                <tr style="background: #3c8dbc;color:white">
+                    <th>Foto</th>
+                    <th>Nome</th>
+                    <th>Partido</th>
+                    <th>Estado</th>
+                    <th>E-mail</th>
+                    <th>Ações</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="Senador in vm.Senadores">
+                    <td>
+                        <img ng-src="{{Senador.UrlFoto}}" style="width:90px"/>
+                    </td>
+                    <td>
+                        <h3>{{Senador.Nome}}</h3>
+                    </td>
+                    <td>
+                        <h3>{{Senador.SiglaPartido}}</h3>
+                    </td>
+                    <td>
+                        <h3>{{Senador.UfMandato}}</h3>
+                    </td>
+                    <td>
+                        <h3>{{Senador.Email}}</h3>
+                    </td>
+                    <td>
+                        <a href="##" class="btn btn-lg btn-block btn-info">
+                            <i class="glyphicon glyphicon-list"></i>
+                            &nbsp;&nbsp;&nbsp;Votos
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
