--- a/ParlamentoWeb/app/components/login/login.view.html
+++ b/ParlamentoWeb/app/components/login/login.view.html
@@ -21,7 +21,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-16">
-                    <div class="checkbox icheck margin-top-5">
+                    <div class="checkbox icheck margin-t-5">
                         <label>
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;Lembrar-Me
                         </label>
