--- a/ParlamentoWeb/app/components/register/register.view.html
+++ b/ParlamentoWeb/app/components/register/register.view.html
@@ -23,7 +23,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-16">
-                    <div class="checkbox icheck margin-top-5">
+                    <div class="checkbox icheck margin-t-5">
                         <label>
                             <input type="checkbox">&nbsp;&nbsp;&nbsp;Concordo com os <a href="#">termos</a>
                         </label>
