--- a/ParlamentoWeb/app/components/senadores/senadores.view.html
+++ b/ParlamentoWeb/app/components/senadores/senadores.view.html
@@ -1,28 +1,52 @@
 ﻿<section class="content-header">
     <h1>
         Lista de Senadores
-        <small>Por Partido</small>
+        <small ng-if="vm.Paginacao.Ordem == 'Nome ASC'">Por Nome (Ascendente)</small>
+        <small ng-if="vm.Paginacao.Ordem == 'Nome DESC'">Por Nome (Descendente)</small>
+        <small ng-if="vm.Paginacao.Ordem == 'SiglaPartido ASC'">Por Partido (Ascendente)</small>
+        <small ng-if="vm.Paginacao.Ordem == 'SiglaPartido DESC'">Por Partido (Descendente)</small>
+        <small ng-if="vm.Paginacao.Ordem == 'UfMandato ASC'">Por Estado (Ascendente)</small>
+        <small ng-if="vm.Paginacao.Ordem == 'UfMandato DESC'">Por Estado (Descendente)</small>
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Senadores</a></li>
-        <li class="active">Por Partido</li>
+        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        <li class="active"><a href="#">Senadores</a></li>
+        <!--<li class="active">Por Partido</li>-->
     </ol>
 </section>
 <section class="content">
     <div class="box">
         <div class="box-body">
             <div ng-include="'app/components/senadores/partials/filtros.partial.html'"></div>
-            <div ng-include="'app/components/senadores/partials/paginacao.partial.html'"></div>
+            <div class="border-tb-1"
+                 ng-include="'app/components/senadores/partials/paginacao.partial.html'"></div>
             <table class="table table-hover">
                 <thead>
-                <tr>
-                    <th>Foto</th>
-                    <th>Nome</th>
-                    <th>Partido</th>
-                    <th>Estado</th>
-                    <th>E-mail</th>
-                    <th>Ações</th>
+                <tr class="vmiddle">
+                    <th class="col-sm-2">
+                        Foto
+                    </th>
+                    <th class="col-sm-7">
+                        Nome
+                        <span ng-if="vm.Paginacao.Ordem == 'Nome ASC'" class="fa fa-caret-up pull-right margin-r-10 padding-t-3"></span>
+                        <span ng-if="vm.Paginacao.Ordem == 'Nome DESC'" class="fa fa-caret-down pull-right margin-r-10 padding-t-3"></span>
+                    </th>
+                    <th class="col-sm-3">
+                        Partido
+                        <span ng-if="vm.Paginacao.Ordem == 'SiglaPartido ASC'" class="fa fa-caret-up pull-right margin-r-10 padding-t-3"></span>
+                        <span ng-if="vm.Paginacao.Ordem == 'SiglaPartido DESC'" class="fa fa-caret-down pull-right margin-r-10 padding-t-3"></span>
+                    </th>
+                    <th class="col-sm-3">
+                        Estado
+                        <span ng-if="vm.Paginacao.Ordem == 'UfMandato ASC'" class="fa fa-caret-up pull-right margin-r-10 padding-t-3"></span>
+                        <span ng-if="vm.Paginacao.Ordem == 'UfMandato DESC'" class="fa fa-caret-down pull-right margin-r-10 padding-t-3"></span>
+                    </th>
+                    <th class="col-sm-2">
+                        E-mail
+                    </th>
+                    <th class="col-sm-3">
+                        Ações
+                    </th>
                 </tr>
                 </thead>
                 <tbody ng-if="!vm.Senadores.length">
@@ -37,24 +61,24 @@
                 </tbody>
                 <tbody>
                 <tr ng-repeat="Senador in vm.Senadores">
-                    <td class="text-center">
+                    <td>
                         <img ng-src="{{Senador.UrlFoto}}" style="height: 70px"/>
                     </td>
                     <td>
-                        <h3>{{Senador.Nome}}</h3>
+                        <h3><a ng-href="{{Senador.UrlPagina}}" target="_blank">{{Senador.Nome}}</a></h3>
                     </td>
                     <td>
                         <h3>{{Senador.SiglaPartido}}</h3>
                     </td>
                     <td>
-                        <h3>{{Senador.UfMandato}}</h3>
+                        <h3><img ng-src="assets/img/uf/{{Senador.UfMandato}}_p.gif" />&nbsp;&nbsp;{{Senador.UfMandato}}</h3>
                     </td>
-                    <td>
-                        <h3>{{Senador.Email}}</h3>
+                    <td class="vmiddle">
+                        <h4>{{Senador.Email}}</h4>
                     </td>
                     <td class="vmiddle">
                         <a href="##" class="btn btn-block btn-default">
-                            <i class="glyphicon glyphicon-list"></i>
+                            <i class="fa fa-bar-chart"></i>
                             &nbsp;&nbsp;&nbsp;Votos
                         </a>
                     </td>
