Layout da Página de Votos

--- a/ParlamentoWeb/app/components/senadores/senadores.view.html
+++ b/ParlamentoWeb/app/components/senadores/senadores.view.html
@@ -77,7 +77,7 @@
                         <h4>{{Senador.Email}}</h4>
                     </td>
                     <td class="vmiddle">
-                        <a href="##" class="btn btn-block btn-default">
+                        <a ui-sref="senador.votos({ id: {{Senador.Codigo}} })" class="btn btn-block btn-default">
                             <i class="fa fa-bar-chart"></i>
                             &nbsp;&nbsp;&nbsp;Votos
                         </a>
