--- a/ParlamentoWeb/app/components/shared/menu.partial.html
+++ b/ParlamentoWeb/app/components/shared/menu.partial.html
@@ -23,5 +23,11 @@
             </a>
             <ul class="treeview-menu"></ul>
         </li>
+        <li class="treeview" ng-class="{ active: $state.current.name == 'materias'}">
+            <a ui-sref="materias">
+                <i class="fa fa-book"></i> <span>Matérias</span>
+            </a>
+            <ul class="treeview-menu"></ul>
+        </li>
     </ul>
 </section>
