--- a/ParlamentoWeb/app/components/login/login.view.html
+++ b/ParlamentoWeb/app/components/login/login.view.html
@@ -6,7 +6,8 @@
         <p class="login-box-msg">Faça o login para acessar o sistema</p>
         <form name="form" ng-submit="form.$valid && vm.login()" novalidate>
             <div class="form-group has-feedback" ng-class="{ 'has-error': form.email.$dirty && !Compare(form.email.$error, {}) }">
-                <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" ng-model="vm.email" required>
+                <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" 
+                       ng-model="vm.email" required>
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                 <div ng-messages="form.email.$dirty && form.email.$error" class="help-block">
                     <div ng-message="required">E-mail obrigatório</div>
@@ -14,7 +15,8 @@
                 </div>
             </div>
             <div class="form-group has-feedback" ng-class="{ 'has-error': form.senha.$dirty && !Compare(form.senha.$error, {}) }">
-                <input type="password" class="form-control" name="senha" id="senha" placeholder="Senha" ng-model="vm.senha" ng-minlength="6" ng-maxlength="20" required>
+                <input type="password" class="form-control" name="senha" id="senha" placeholder="Senha" 
+                       ng-model="vm.senha" ng-minlength="6" ng-maxlength="20" required>
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 <div ng-messages="form.senha.$dirty && form.senha.$error" class="help-block">
                     <div ng-message="required">Senha obrigatória</div>
@@ -38,7 +40,7 @@
                 </div>
             </div>
         </form>
-        <a href="#">Esqueci minha senha</a><br>
+        <a href="">Esqueci minha senha</a><br>
         <a ui-sref="registro" class="text-center">Registrar novo usuário</a>
     </div>
     <br />
