--- a/ParlamentoWeb/app/components/registro/registro.view.html
+++ b/ParlamentoWeb/app/components/registro/registro.view.html
@@ -5,46 +5,51 @@
     <div class="register-box-body">
         <p class="login-box-msg">Registrar novo usuário</p>
         <form name="form" ng-submit="form.$valid && vm.registrar()" novalidate>
-            <div class="form-group has-feedback" ng-class="{ 'has-error': form.email.$dirty && !Compare(form.nomeCompleto.$error, {}) }">
-                <input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto" placeholder="Nome Completo" ng-model="vm.nomeCompleto" ng-minlength="3" ng-maxlength="70" required>
+            <div class="form-group has-feedback" ng-class="{ 'has-error': (form.$submitted || form.nomeCompleto.$dirty) && !Compare(form.nomeCompleto.$error, {}) }">
+                <input type="text" class="form-control" name="nomeCompleto" id="nomeCompleto" placeholder="Nome Completo" 
+                       ng-model="vm.nomeCompleto" ng-minlength="3" ng-maxlength="70" required>
                 <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                <div ng-messages="form.nomeCompleto.$dirty && form.nomeCompleto.$error" class="help-block">
+                <div ng-messages="(form.$submitted || form.nomeCompleto.$dirty) && form.nomeCompleto.$error" class="help-block">
                     <div ng-message="required">Nome obrigatório</div>
                     <div ng-message="minlength">Nome deve ter no mínimo 3 caracteres</div>
                     <div ng-message="maxlength">Nome deve ter no máximo 70 caracteres</div>
                 </div>
             </div>
-            <div class="form-group has-feedback" ng-class="{ 'has-error': form.email.$dirty && !Compare(form.email.$error, {}) }">
-                <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" ng-model="vm.email" required>
+            <div class="form-group has-feedback" ng-class="{ 'has-error': (form.$submitted || form.email.$dirty) && !Compare(form.email.$error, {}) }">
+                <input type="email" class="form-control" name="email" id="email" placeholder="E-mail" 
+                       ng-model="vm.email" required>
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                <div ng-messages="form.email.$dirty && form.email.$error" class="help-block">
+                <div ng-messages="(form.$submitted || form.email.$dirty) && form.email.$error" class="help-block">
                     <div ng-message="required">E-mail obrigatório</div>
                     <div ng-message="email">E-mail inválido</div>
                 </div>
             </div>
-            <div class="form-group has-feedback" ng-class="{ 'has-error': form.confirmarEmail.$dirty && !Compare(form.confirmarEmail.$error, {}) }">
-                <input type="email" class="form-control" name="confirmarEmail" id="confirmarEmail" placeholder="Confirmar E-mail" ng-model="vm.confirmarEmail" ng-minlength="6" ng-maxlength="20" compare="vm.email" required>
+            <div class="form-group has-feedback" ng-class="{ 'has-error': (form.$submitted || (form.email.$valid && form.confirmarEmail.$dirty)) && !Compare(form.confirmarEmail.$error, {}) }">
+                <input type="email" class="form-control" name="confirmarEmail" id="confirmarEmail" placeholder="Confirmar E-mail" 
+                       ng-model="vm.confirmarEmail" match="vm.email" required>
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-                <div ng-messages="form.confirmarEmail.$dirty && form.confirmarEmail.$error" class="help-block">
-                    <div ng-message="required">E-mail obrigatório</div>
-                    <div ng-message="compare">E-mails não conferem</div>
+                <div ng-messages="(form.$submitted || (form.email.$valid && form.confirmarEmail.$dirty)) && form.confirmarEmail.$error" class="help-block">
+                    <div ng-message="required">Confirmar E-mail obrigatório</div>
+                    <div ng-message="match">E-mails não conferem</div>
                 </div>
             </div>
-            <div class="form-group has-feedback" ng-class="{ 'has-error': form.senha.$dirty && !Compare(form.senha.$error, {}) }">
-                <input type="password" class="form-control" name="senha" id="senha" placeholder="Senha" ng-model="vm.senha" ng-minlength="6" ng-maxlength="20" required>
+            <div class="form-group has-feedback" ng-class="{ 'has-error': (form.$submitted || form.senha.$dirty) && !Compare(form.senha.$error, {}) }">
+                <input type="password" class="form-control" name="senha" id="senha" placeholder="Senha" 
+                       ng-model="vm.senha" ng-minlength="6" ng-maxlength="20" required>
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                <div ng-messages="form.senha.$dirty && form.senha.$error" class="help-block">
+                <div ng-messages="(form.$submitted || form.senha.$dirty) && form.senha.$error" class="help-block">
                     <div ng-message="required">Senha obrigatória</div>
                     <div ng-message="minlength">Senha deve ter no mínimo 6 caracteres</div>
                     <div ng-message="maxlength">Senha deve ter no máximo 20 caracteres</div>
                 </div>
             </div>
-            <div class="form-group has-feedback" ng-class="{ 'has-error': form.confirmarSenha.$dirty && !Compare(form.confirmarSenha.$error, {}) }">
-                <input type="password" class="form-control" name="confirmarSenha" id="confirmarSenha" placeholder="Confirmar Senha" ng-model="vm.confirmarSenha" ng-minlength="6" ng-maxlength="20" compare="vm.senha" required>
+            <div class="form-group has-feedback" ng-class="{ 'has-error': (form.$submitted || (form.senha.$valid && form.confirmarSenha.$dirty)) && !Compare(form.confirmarSenha.$error, {}) }">
+                <input type="password" class="form-control" name="confirmarSenha" id="confirmarSenha" placeholder="Confirmar Senha" 
+                       ng-model="vm.confirmarSenha" match="vm.senha" required>
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                <div ng-messages="form.confirmarSenha.$dirty && form.confirmarSenha.$error" class="help-block">
-                    <div ng-message="required">Senha obrigatória</div>
-                    <div ng-message="compare">Senhas não conferem</div>
+                <div ng-messages="(form.$submitted || (form.senha.$valid && form.confirmarSenha.$dirty)) && form.confirmarSenha.$error" class="help-block">
+                    <div ng-message="required">Confirmar Senha obrigatória</div>
+                    <div ng-message="match">Senhas não conferem</div>
                 </div>
             </div>
             <div class="row">
