--- a/ParlamentoWeb/app/components/shared/header.partial.html
+++ b/ParlamentoWeb/app/components/shared/header.partial.html
@@ -12,7 +12,7 @@
     <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-user"></i>&nbsp;&nbsp;&nbsp;
                     <span class="hidden-xs">{{vm.nomeCompleto}}</span>
                 </a>
