--- a/ParlamentoWeb/app/components/senador/votos/votos.view.html
+++ b/ParlamentoWeb/app/components/senador/votos/votos.view.html
@@ -31,7 +31,7 @@
                         <div class="col-sm-8 padding-t-10">
                             <div class="form-group">
                                 <label for="filtroAssuntoGeral">Assunto Geral</label>
-                                <select class="form-control" id="filtroAssuntoGeral" ng-model="vm.MateriaAssuntoGeral" ng-change="vm.Atualizar(null, true)"
+                                <select class="form-control" id="filtroAssuntoGeral" ng-model="vm.MateriaAssuntoGeral" ng-change="vm.Atualizar()"
                                         ng-options="MateriaAssuntoGeral for MateriaAssuntoGeral in vm.MateriasAssuntosGerais">
                                     <option value="">Tudo</option>
                                 </select>
@@ -40,7 +40,7 @@
                         <div class="col-sm-8 padding-t-10">
                             <div class="form-group">
                                 <label for="filtroAssuntoEspecifico">Assunto Específico</label>
-                                <select class="form-control" id="filtroAssuntoEspecifico" ng-model="vm.CodigoAssuntoMateria" ng-change="vm.Atualizar(null, true)"
+                                <select class="form-control" id="filtroAssuntoEspecifico" ng-model="vm.CodigoAssuntoMateria" ng-change="vm.Atualizar()"
                                         ng-options="MateriaAssunto.Codigo as MateriaAssunto.AssuntoEspecifico for MateriaAssunto in vm.MateriasAssuntos 
                                         | filter: (vm.MateriaAssuntoGeral && MateriaAssunto.Codigo != 0 || '') && { AssuntoGeral: vm.MateriaAssuntoGeral }">
                                     <option value="">Tudo</option>
