--- a/ParlamentoWeb/app/components/shared/footer.partial.html
+++ b/ParlamentoWeb/app/components/shared/footer.partial.html
@@ -1,4 +1,4 @@
 ﻿<div class="pull-right hidden-xs">
     <b>Versão</b> 1.0.0
 </div>
-<strong>Copyright &copy; 2016 <a href="#">Carlos, Cintia e Nathalia</a>.</strong> Todos os direitos reservados.
+<strong>Copyright &copy; 2016 <a href="">Carlos, Cintia e Nathalia</a>.</strong> Todos os direitos reservados.
