--- a/ParlamentoWeb/app/components/shared/header.partial.html
+++ b/ParlamentoWeb/app/components/shared/header.partial.html
@@ -3,7 +3,7 @@
     <span class="logo-lg">Votos<b>SENADO</b></span>
 </a>
 <nav class="navbar navbar-static-top">
-    <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+    <a href="" class="sidebar-toggle" data-toggle="offcanvas" role="button">
         <span class="sr-only">Alternar Navegação</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
